INTERNAL-304: Implement hyva.replaceDomElement in __fetchPage Implemented this page refetch method to avoid filter state bugs on product search page

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -65,7 +65,7 @@ $catalogHelper = $this->helper(Data::class);
                 }"
                             class="radio mb-0 h-full w-full py-3"">
                     <span class="radio__control " aria-hidden="true"></span>
-                    <span class="radio__label text-md ">
+                    <span class="radio__label text-md text-left">
                         <?= /* @noEscape */
                         $filterItem->getLabel() ?>
                     </span>
