--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -116,9 +116,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                           'w-full': isVariantInCart
                       }"
                   >
-                      {$block->getChildBlock('product.actions')->setData([
-        'is_small' => true, 'is_popup' => false
-      ])->toHtml()}
+                      {$block->getChildBlock('product.actions')->setData(['is_small' => true, 'is_popup' => false])->toHtml()}
                   </div>
               </div>
           </template>
@@ -151,9 +149,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 <template x-portal="document.getElementById('popup-fixed-content-portal')">
                   <div x-show="\$store.popup.currentPopup === productActionsPopup">
                     <div class="mb-2 flex flex-grow justify-stretch gap-3 bg-bg-500 px-4">
-                      {$block->getChildBlock('product.actions')->setData([
-        'is_popup' => true, 'is_small' => false
-      ])->toHtml()}
+                      {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
                     </div>
                   </div>
                 </template>
