--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
@@ -23,122 +23,117 @@ $optionId = $option->getId();
 $activeSelectOptions = [];
 
 ?>
-<?php if ($block->showSingle()): ?>
-  <label class="radio mb-0 w-full py-1"
-         for="bundle-option-<?= (int) $optionId ?>-<?= (int) $selections[0]->getSelectionId() ?>">
-    <input type="checkbox"
-           id="bundle-option-<?= (int) $optionId ?>-<?= (int) $selections[0]->getSelectionId() ?>"
-           name="bundle_option[<?= (int) $optionId ?>]"
-           form="product_addtocart_form"
-           class="radio__input"
-           value="<?= (int) $selections[0]->getSelectionId() ?>"
-           checked
-           data-option-id="<?= (int) $optionId ?>"
-           data-selection-id="<?= (int) $selections[0]->getSelectionId() ?>"
-    />
-    <span class="radio__control h-5 w-5" aria-hidden="true"></span>
-    <span class="radio__label ml-3"><?= /* @noEscape */
-      $radioPriceRenderer->getSelectionTitlePrice($selections[0]) ?></span>
-  </label>
-  <?= /* @noEscape */
-  $block->getTierPriceRenderer()->renderTierPrice($selections[0]) ?>
-  <?php if ((int) $selections[0]->getSelectionId()) {
-    array_push($activeSelectOptions, (int) $selections[0]->getSelectionId());
-  } ?>
-<?php else: ?>
+<div class="flex justify-between items-center gap-3">
+  <?php if ($block->showSingle()): ?>
+      <input type="hidden"
+            id="bundle-option-<?= (int) $optionId ?>-<?= (int) $selections[0]->getSelectionId() ?>"
+            name="bundle_option[<?= (int) $optionId ?>]"
+            form="product_addtocart_form"
+            value="<?= (int) $selections[0]->getSelectionId() ?>"
+            checked
+            data-option-id="<?= (int) $optionId ?>"
+            data-selection-id="<?= (int) $selections[0]->getSelectionId() ?>"
+      />
+      <span><?= /* @noEscape */ $radioPriceRenderer->getSelectionTitlePrice($selections[0]) ?></span>
+    <?= /* @noEscape */
+    $block->getTierPriceRenderer()->renderTierPrice($selections[0]) ?>
+    <?php if ((int) $selections[0]->getSelectionId()) {
+      array_push($activeSelectOptions, (int) $selections[0]->getSelectionId());
+    } ?>
+  <?php else: ?>
 
-  <!-- Radio group -->
-  <div role="radiogroup"
-       aria-label="<?= $escaper->escapeHtmlAttr(__('%1 options', $option->getTitle())) ?>"
-  >
-    <?php if (!$option->getRequired()): ?>
-      <div class="mb-2">
-        <label class="radio mb-0 w-full py-1"
-               for="bundle-option-<?= (int) $optionId ?>">
+    <!-- Radio group -->
+    <div role="radiogroup"
+        aria-label="<?= $escaper->escapeHtmlAttr(__('%1 options', $option->getTitle())) ?>"
+    >
+      <?php if (!$option->getRequired()): ?>
+        <div class="mb-2">
+          <label class="radio mb-0 w-full py-1"
+                for="bundle-option-<?= (int) $optionId ?>">
+            <input type="radio"
+                  id="bundle-option-<?= (int) $optionId ?>"
+                  name="bundle_option[<?= (int) $optionId ?>]"
+                  form="product_addtocart_form"
+                  class="radio__input"
+              <?= ($default && $default->isSalable()) ? '' : ' checked ' ?>
+                  value=""
+                  x-on:change="
+                            activeSelectOptions['<?= (int) $optionId ?>'] = [$event.target.value];
+                            $nextTick(() => {calculateTotalPrice()});
+                      "
+            />
+
+            <span class="radio__control h-5 w-5" aria-hidden="true"></span>
+            <span class="radio__label ml-3"><?= $escaper->escapeHtml(__('None')) ?>
+          </label>
+        </div>
+      <?php endif; ?>
+
+      <?php foreach ($selections as $selection): ?>
+        <?php $selectionId = $selection->getSelectionId(); ?>
+        <?php $optionSelectionId = $optionId . '-' . $selectionId ?>
+        <label
+          class="radio mb-0 w-full py-1"
+          for="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
+        >
           <input type="radio"
-                 id="bundle-option-<?= (int) $optionId ?>"
-                 name="bundle_option[<?= (int) $optionId ?>]"
-                 form="product_addtocart_form"
-                 class="radio__input"
-            <?= ($default && $default->isSalable()) ? '' : ' checked ' ?>
-                 value=""
-                 x-on:change="
-                          activeSelectOptions['<?= (int) $optionId ?>'] = [$event.target.value];
-                          $nextTick(() => {calculateTotalPrice()});
-                     "
+                id="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
+                name="bundle_option[<?= (int) $optionId ?>]"
+                form="product_addtocart_form"
+                class="radio__input"
+            <?= $option->getRequired() ? 'required' : '' ?>
+            <?php if ($block->isSelected($selection)) {
+              array_push($activeSelectOptions, $selectionId);
+              echo 'checked = "checked"';
+            } ?>
+            <?php if (!$selection->isSaleable()): ?>
+              disabled
+            <?php endif; ?>
+            value="<?= (int) $selectionId ?>"
+            data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
+            x-on:change="
+              activeSelectOptions['<?= (int)$optionId ?>'] = [$event.target.value];
+              $nextTick(() => {calculateTotalPrice()});
+            "
           />
-
           <span class="radio__control h-5 w-5" aria-hidden="true"></span>
-          <span class="radio__label ml-3"><?= $escaper->escapeHtml(__('None')) ?>
+          <span class="radio__label ml-3"><?= /* @noEscape */
+            $radioPriceRenderer->getSelectionTitlePrice($selection) ?></span>
         </label>
-      </div>
-    <?php endif; ?>
 
-    <?php foreach ($selections as $selection): ?>
-      <?php $selectionId = $selection->getSelectionId(); ?>
-      <?php $optionSelectionId = $optionId . '-' . $selectionId ?>
-      <label
-        class="radio mb-0 w-full py-1"
-        for="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-      >
-        <input type="radio"
-               id="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-               name="bundle_option[<?= (int) $optionId ?>]"
-               form="product_addtocart_form"
-               class="radio__input"
-          <?= $option->getRequired() ? 'required' : '' ?>
-          <?php if ($block->isSelected($selection)) {
-            array_push($activeSelectOptions, $selectionId);
-            echo 'checked = "checked"';
-          } ?>
-          <?php if (!$selection->isSaleable()): ?>
-            disabled
-          <?php endif; ?>
-          value="<?= (int) $selectionId ?>"
-          data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-          x-on:change="
-            activeSelectOptions['<?= (int)$optionId ?>'] = [$event.target.value];
-            $nextTick(() => {calculateTotalPrice()});
-          "
-        />
-        <span class="radio__control h-5 w-5" aria-hidden="true"></span>
-        <span class="radio__label ml-3"><?= /* @noEscape */
-          $radioPriceRenderer->getSelectionTitlePrice($selection) ?></span>
-      </label>
+        <div class="text-sm my-2">
+          <?= /* @noEscape */
+          $block->getTierPriceRenderer()->renderTierPrice($selection) ?>
+        </div>
+      <?php endforeach; ?>
+    </div>
+  <?php endif; ?>
 
-      <div class="text-sm my-2">
-        <?= /* @noEscape */
-        $block->getTierPriceRenderer()->renderTierPrice($selection) ?>
-      </div>
-    <?php endforeach; ?>
+
+  <!-- Quantity control -->
+  <div class="contents">
+    <label for="bundle-option-<?= (int) $optionId ?>-qty-input" class="sr-only tracking-widest">
+      <?= $escaper->escapeHtml(__('Quantity')) ?>
+    </label>
+
+    <input
+      aria-describedby="option-label-<?= (int) $optionId ?>"
+      id="bundle-option-<?= (int) $optionId ?>-qty-input"
+      form="product_addtocart_form"
+      name="bundle_option_qty[<?= (int) $optionId ?>]"
+      class="input__field flex-shrink-0 basis-14 text-center bg-transparent h-9 px-3 disabled:opacity-75"
+      type="number"
+      min="0"
+      value="<?= $escaper->escapeHtmlAttr($defaultQty) ?>"
+      :value="getQtyValue(<?= (int) $optionId ?>)"
+      x-on:change="
+        setQtyValue(<?= (int) $optionId ?>, $event.target.value);
+        calculateTotalPrice($dispatch)"
+      <?php if (!$canChangeQty): ?> disabled <?php endif; ?>
+      :disabled="getQtyDisabled(<?= (int) $optionId ?>)"
+    />
   </div>
-<?php endif; ?>
-
-
-<!-- Quantity control -->
-<div class="contents">
-  <label for="bundle-option-<?= (int) $optionId ?>-qty-input" class="sr-only tracking-widest">
-    <?= $escaper->escapeHtml(__('Quantity')) ?>
-  </label>
-
-  <input
-    aria-describedby="option-label-<?= (int) $optionId ?>"
-    id="bundle-option-<?= (int) $optionId ?>-qty-input"
-    form="product_addtocart_form"
-    name="bundle_option_qty[<?= (int) $optionId ?>]"
-    class="animate-on-transition input__field flex-shrink-0 basis-14 text-center bg-transparent h-9 px-3 disabled:opacity-75"
-    type="number"
-    min="0"
-    value="<?= $escaper->escapeHtmlAttr($defaultQty) ?>"
-    :value="getQtyValue(<?= (int) $optionId ?>)"
-    x-on:change="
-      setQtyValue(<?= (int) $optionId ?>, $event.target.value);
-      calculateTotalPrice($dispatch)"
-    <?php if (!$canChangeQty): ?> disabled <?php endif; ?>
-    :disabled="getQtyDisabled(<?= (int) $optionId ?>)"
-  />
 </div>
-
 <?php
 /**
  * Set the initial values on activeSelectOptions
