INTERNAL-27; update styles

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
@@ -21,7 +21,7 @@ $productViewModel = $viewModels->require(ProductPage::class);
 $productPriceViewModel = $viewModels->require(ProductPrice::class);
 
 $product = $block->getData('product');
-$customClass = $block->getData('class');
+$class = $block->getData('class');
 $isInline = (bool)$block->getData('isInline');
 $isAlpineTemplate = (bool)$block->getData('isAlpineTemplate');
 $showBadge = (bool)$block->getData('showBadge');
@@ -45,7 +45,7 @@ $customOptionPrices = [];
 ?>
 
 <?php if ($isAlpineTemplate): ?>
-    <div class="price__element flex items-center gap-2 text-text-500 <?= $customClass ?>">
+    <div class="price__element z-10 flex items-center gap-2 text-text-500 <?= $class ?>">
         <template x-if="product.price_range.minimum_price.final_price.value < product.price_range.minimum_price.regular_price.value">
             <div>
                 <span class="sr-only"><?= __('Sale Price') ?></span>
@@ -69,7 +69,7 @@ $customOptionPrices = [];
 <?php else: ?>
     <div class="<?= $isInline ? 'flex items-end flex-grow gap-3 mt-3 [&>div]:mt-0' : 'contents' ?>">
         <div
-            class="price__element flex items-center gap-x-2 text-text-500 flex-wrap sm:justify-start justify-end sm:text-left text-right <?= $customClass ?>">
+            class="price__element z-10 flex items-center gap-2 text-text-500 <?= $class ?>">
             <?php if ($isSpecialPriceValid): ?>
                 <span class="sr-only"><?= __('Sale Price') ?></span>
                 <span class="text-primary-500">
