--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
@@ -51,8 +51,8 @@ $customOptionPrices = [];
             <div>
                 <span class="sr-only"><?= __('Sale Price') ?></span>
                 <span class="text-primary-500"
-                      x-text="parseFloat(product.price_range.minimum_price.final_price.value).toFixed(2) + ' ' + product.price_range.minimum_price.final_price.currency"></span>
-                <s x-text="parseFloat(product.price_range.minimum_price.regular_price.value).toFixed(2) + ' ' + product.price_range.minimum_price.regular_price.currency"></s>
+                      x-text="getFormattedPrice(product.price_range.minimum_price.final_price.value, product.price_range.minimum_price.final_price.currency)"></span>
+                <s x-text="getFormattedPrice(product.price_range.minimum_price.regular_price.value, product.price_range.minimum_price.regular_price.currency)"></s>
             </div>
         </template>
         <template
@@ -60,7 +60,7 @@ $customOptionPrices = [];
             <div>
                 <span><?= __('From') ?></span>
                 <span class="text-primary-500"
-                      x-text="parseFloat(product.price_range.minimum_price.final_price.value).toFixed(2) + ' ' + product.price_range.minimum_price.final_price.currency"></span>
+                      x-text="getFormattedPrice(product.price_range.minimum_price.final_price.value, product.price_range.minimum_price.final_price.currency)"></span>
             </div>
         </template>
         <template
@@ -68,7 +68,7 @@ $customOptionPrices = [];
             <div>
                 <span class="sr-only"><?= __('Regular Price') ?></span>
                 <span class="text-primary-500"
-                      x-text="parseFloat(product.price_range.minimum_price.final_price.value).toFixed(2) + ' ' + product.price_range.minimum_price.final_price.currency"></span>
+                      x-text="getFormattedPrice(product.price_range.minimum_price.final_price.value, product.price_range.minimum_price.final_price.currency)"></span>
             </div>
         </template>
     </div>
@@ -79,23 +79,23 @@ $customOptionPrices = [];
                 <span class="sr-only"><?= __('Sale Price') ?></span>
                 <span class="text-primary-500">
                 <?= /** @noEscape */
-                $productViewModel->format($specialPrice) ?>
+                $productViewModel->formatCurrencyBefore($specialPrice) ?>
             </span>
                 <s>
                     <?= /** @noEscape */
-                    $productViewModel->format($regularPrice) ?>
+                    $productViewModel->formatCurrencyBefore($regularPrice) ?>
                 </s>
             <?php elseif ($product->getPriceMin() != $product->getPriceMax()): ?>
                 <span><?= __('From') ?></span>
                 <span>
                 <?= /** @noEscape */
-                $productViewModel->format($product->getPriceMin()) ?>
+                $productViewModel->formatCurrencyBefore($product->getPriceMin()) ?>
             </span>
             <?php else: ?>
                 <span class="sr-only"><?= __('Regular Price') ?></span>
                 <span class="text-primary-500">
                 <?= /** @noEscape */
-                $productViewModel->format($regularPrice) ?>
+                $productViewModel->formatCurrencyBefore($regularPrice) ?>
             </span>
             <?php endif; ?>
 
@@ -103,14 +103,14 @@ $customOptionPrices = [];
                 <span class="sr-only"><?= __('From') ?></span>
                 <span class="text-primary-500">
                 <?= /** @noEscape */
-                $productViewModel->format($productPriceViewModel->getLowestTierPrice($tierPrices)) ?>
+                $productViewModel->formatCurrencyBefore($productPriceViewModel->getLowestTierPrice($tierPrices)) ?>
             </span>
             <?php endif; ?>
 
             <?php if ($msrpPrice && $msrpPrice->canApplyMsrp($product) && $msrpPrice->isMinimalPriceLessMsrp($product)): ?>
                 <span class="sr-only"><?= __('MSRP') ?></span>
                 <span class="text-gray-500"><?= /** @noEscape */
-                    $productViewModel->format($msrpPrice->getAmount()->getValue()) ?>
+                    $productViewModel->formatCurrencyBefore($msrpPrice->getAmount()->getValue()) ?>
                 </span>
             <?php endif; ?>
 
@@ -118,7 +118,7 @@ $customOptionPrices = [];
                 <span class="sr-only"><?= __('Custom Options Price') ?></span>
                 <span class="text-primary-500">
                 <?= /** @noEscape */
-                $productViewModel->format($finalPrice + array_sum($customOptionPrices)) ?>
+                $productViewModel->formatCurrencyBefore($finalPrice + array_sum($customOptionPrices)) ?>
             </span>
             <?php endif; ?>
 
