--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
@@ -10,7 +10,8 @@
 
         <referenceBlock name="product.info">
             <!-- Product actions -->
-            <block name="product.actions" template="Magento_Catalog::product/view/product-actions.phtml" />
+            <block class="Satoshi\Theme\Block\ProductActions" name="product.actions"
+                   template="Magento_Catalog::product/view/product-actions.phtml"/>
         </referenceBlock>
         <move element="product.info.quantity" destination="product.actions" />
 
