INTERNAL-61; remove columns, column, and main classes from columns and main containers

--- a/app/code/Satoshi/Theme/view/frontend/templates/404.phtml
+++ b/app/code/Satoshi/Theme/view/frontend/templates/404.phtml
@@ -14,7 +14,7 @@ $content = $block->getChildHtml('cms_page') ?? $block->getChildHtml('cms_noroute
 
 <div class="flex h-full flex-col items-center justify-center gap-5">
     <p class="text-[80px] leading-none">
-        <?= $title; ?>
+        <?= $title ?>
     </p>
 
     <div>
