--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -30,8 +30,8 @@
         <!-- END: Wrap content within preview-content comment -->
 
         <!-- Add h-full classes to columns and main -->
-        <referenceContainer name="columns" htmlClass="columns h-full"/>
-        <referenceContainer name="main" htmlClass="column main h-full"/>
+        <referenceContainer name="columns" htmlClass="h-full"/>
+        <referenceContainer name="main" htmlClass="h-full"/>
 
         <referenceContainer name="header.container" htmlClass="page-header contents"/>
         <referenceContainer name="page.wrapper" htmlClass="flex min-h-screen max-w-screen flex-col bg-bg-500">
